--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
     </uses-feature>
     
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE">
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     </uses-permission>
 
     <application
@@ -22,6 +23,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Translation"
         tools:targetApi="31">
+
+        <activity
+            android:name=".RecordActivity"
+            android:exported="true"/>
+
+        </activity>
 
         <activity
             android:name=".MainActivity"
