--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,14 @@
 
         <activity
             android:name=".RecordActivity"
+            android:exported="true">
+
+        </activity>
+
+        <activity
+            android:name=".ShowRecord"
             android:exported="true"/>
+
 
         </activity>
 
@@ -35,7 +42,6 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
