--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -21,14 +22,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Translation"
         tools:targetApi="31">
-
-        <activity
-            android:name=".RecordActivity"
-            android:exported="true" />
-
-        <activity
-            android:name=".ShowRecord"
-            android:exported="true" />
 
         <activity
             android:name=".MainActivity"
