修复了一些问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,10 @@
 
         </activity>
 
+        <activity android:name=".PrivacyPolicy">
+
+        </activity>
+
         <activity android:name=".OfflineTranslationActivity">
 
         </activity>
